--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/swagger": "^11.2.0",
     "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
+    "dotenv": "^16.5.0",
     "multer": "^2.0.0",
     "puppeteer": "^24.9.0",
     "reflect-metadata": "^0.2.2",
