--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.1.1",
     "@nestjs/swagger": "^11.2.0",
     "axios": "^1.9.0",
+    "chromium": "^3.0.3",
     "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
     "multer": "^2.0.0",
